# black-bean

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.gradle.kts  gradle.properties  patch.diff  patch2.diff  patch3.diff  settings.gradle.kts
.github/workflows/: android.yml  rust.yml
adzuki/: build.rs
adzuki/src/: lib.rs
adzuki/tests/fixtures/: code_blocks.md
black-bean/: Cargo.toml
gradle/: libs.versions.toml
kotlin/androidApp/: build.gradle.kts  build.gradle.kts.orig
kotlin/androidApp/src/main/: AndroidManifest.xml
kotlin/androidApp/src/main/java/uniffi/adzuki/: adzuki.kt
kotlin/androidApp/src/main/kotlin/com/adzuki/android/: MainActivity.kt
kotlin/androidApp/src/main/kotlin/tech/bananajuice/adzuki/android/: AdzukiApplication.kt  MainActivity.kt  MainActivity.kt.orig
kotlin/androidApp/src/main/kotlin/tech/bananajuice/adzuki/android/data/: AdzukiDatabase.kt  FoldedHeadingDao.kt  FoldedHeadingEntity.kt  RoomFoldStateRepository.kt
kotlin/androidApp/src/test/kotlin/com/adzuki/android/: MainActivityTest.kt
kotlin/shared/: build.gradle.kts
kotlin/shared/src/commonMain/kotlin/: Greeting.kt
kotlin/shared/src/commonTest/kotlin/: GreetingTest.kt
rust/: Cargo.toml
rust/adzuki/: Cargo.toml  test_invalid.md
rust/adzuki/src/: beancount_parser.rs  beancount_parser.rs.orig  core.rs  lexer.rs  lib.rs  lib.rs.orig  markdown.llw  parser.rs  plugin.rs  reports.rs  validator.rs
rust/adzuki/tests/: integration_tests.rs  test_bean_check.rs
rust/adzuki/tests/fixtures/: headings.md  invalid.md  unbalanced.md  valid.md
(+5 files in other folders)
