[package]
name = "adzuki"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
logos = "0.16"
nom = "7"
uniffi = { version = "0.31.0", features = ["cli"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi_bindgen.rs"

[[bin]]
name = "bean-check"
path = "src/bin/bean-check.rs"
