[package]
name = "adzuki"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
logos = "0.16"
nom = "7"
rust_decimal = "1.40.0"
uniffi = { version = "0.29.5", features = ["cli"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi_bindgen.rs"

[[bin]]
name = "bean-check"
path = "src/bin/bean-check.rs"

[dev-dependencies]
rust_decimal_macros = "1.40.0"
